WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304587
[WTF] Fix -Wcharacter-conversion in StringConcatenate.h
https://bugs.webkit.org/show_bug.cgi?id=304587
Summary
[WTF] Fix -Wcharacter-conversion in StringConcatenate.h
David Kilzer (:ddkilzer)
Reported
2025-12-21 22:07:01 PST
Fix -Wcharacter-conversion warning in Source/WTF/wtf/text/StringConcatenate.h on later clang versions: ``` WebKitBuild/Release/usr/local/include/wtf/text/StringConcatenate.h:112:30: warning: implicit conversion from 'const char32_t' to 'char16_t' may lose precision and change the meaning of the represented code unit [-Wcharacter-conversion] 112 | destination[0] = m_character; | ~ ^~~~~~~~~~~ 1 warning generated. ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-21 22:07:15 PST
<
rdar://problem/167000556
>
David Kilzer (:ddkilzer)
Comment 2
2025-12-21 22:36:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55782
EWS
Comment 3
2025-12-22 08:01:56 PST
Committed
304863@main
(c66e3d9d25c8): <
https://commits.webkit.org/304863@main
> Reviewed commits have been landed. Closing PR #55782 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug