[WTF] Fix -Wcharacter-conversion in StringConcatenate.h <https://bugs.webkit.org/show_bug.cgi?id=304587> <rdar://167000556>

Reviewed by Brandon Stewart and Chris Dumez.

* Source/WTF/wtf/text/StringConcatenate.h:
(WTF::StringTypeAdapter<char32_t>::writeTo const):
- Fix warning with static_cast<char16_t>().

Canonical link: https://commits.webkit.org/304863@main